chore: fix styles that were broken in upgardes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,8 +14,8 @@
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
 //    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
-@include mat.all-legacy-component-typographies();
-@include mat.legacy-core();
+@include mat.all-component-typographies();
+@include mat.core();
 
 $kincaid-primary: mat.define-palette(var.$primary-palette);
 $kincaid-accent: mat.define-palette(var.$secondary-palette);
@@ -53,15 +53,15 @@ $kincaid-dark-theme: mat.define-dark-theme(
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
 //    `@include mat.legacy-typography-hierarchy($kincaid-typography);`
-@include mat.all-legacy-component-typographies($kincaid-typography);
-@include mat.legacy-core();
+@include mat.all-component-typographies($kincaid-typography);
+@include mat.core();
 
 .dark-mode {
-	@include mat.all-legacy-component-themes($kincaid-dark-theme);
+	@include mat.all-component-themes($kincaid-dark-theme);
 }
 
 .light-mode {
-	@include mat.all-legacy-component-themes($kincaid-light-theme);
+	@include mat.all-component-themes($kincaid-light-theme);
 }
 
 html,
